--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-inline-version": "^1.0.2",
     "babel-plugin-transform-class-properties": "^6.4.0",
     "babel-plugin-transform-flow-strip-types": "^6.4.0",
     "babel-plugin-transform-object-rest-spread": "^6.3.13",
