(wip) Signing transactions

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "watchify": "^3.6.0",
     "webpack": "^4.1.1",
     "webpack-cli": "^2.0.12",
-    "webpack-dev-server": "^3.1.1"
+    "webpack-dev-server": "^3.1.1",
+    "casperjs": "1.1.4"
   }
 }
