--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bip44-constants": "^2.3.0",
     "bitcoinjs-lib": "^3.3.1",
     "bowser": "^1.9.3",
+    "coininfo": "^4.0.1",
     "es6-promise": "^2.3.0",
     "fast-async": "^6.3.1",
     "hd-wallet": "^7.11.3",
