--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "browserify": "^13.1.1",
     "casperjs": "1.1.4",
     "exorcist": "^0.4.0",
+    "mock-trezor": "^1.0.1",
     "npm-run-all": "^4.1.3",
     "sinon": "^6.1.3",
     "testcafe": "^0.20.4",
