Use Ethereum path to getPublic method to get the address

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hd-wallet": "^7.11.3",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
+    "mock-trezor": "^1.0.5",
     "trezor.js": "6.1.0",
     "web3": "^1.0.0-beta.34",
     "web3-mock": "github:werner/web3-mock"
