--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
     "npm-run-all": "^4.1.3",
     "sinon": "^6.1.3",
     "testcafe": "^0.20.4",
+    "ts-loader": "^4.4.2",
+    "typescript": "^3.0.1",
     "uglifyify": "^3.0.1",
     "watchify": "^3.6.0",
     "webpack": "^4.1.1",
