--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/bitex-la/custodian-popup",
   "dependencies": {
     "@intercellular/cell": "bitex-la/cell#virus",
+    "@types/web3": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bip32-path": "0.4.2",
     "bip44-constants": "^2.3.0",
