--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
     "mock-trezor": "^1.0.5",
+    "trezor-connect": "^5.0.27",
     "trezor.js": "6.1.0",
     "web3": "^1.0.0-beta.34",
     "web3-mock": "github:werner/web3-mock"
