--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,5 +7,6 @@
     "target": "es6",
     "allowJs": true,
     "lib": ["es5", "es2015", "dom", "scripthost"]
-  }
+  },
+  "exclude": [ "**/node_modules/*" ]
 }
