--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "homepage": "https://github.com/bitex-la/custodian-popup",
   "dependencies": {
     "@intercellular/cell": "bitex-la/cell#virus",
+    "@types/bitcoinjs-lib": "^3.4.0",
     "@types/web3": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bip32-path": "0.4.2",
     "bip44-constants": "^2.3.0",
     "bitcoin-to-rsk-key-utils": "github:rsksmart/utils",
-    "bitcoinjs-lib": "^3.3.1",
+    "bitcoinjs-lib": "^4.0.1",
     "bowser": "^1.9.3",
     "coininfo": "^4.0.1",
     "es6-promise": "^2.3.0",
