--- a/package.json
+++ b/package.json
@@ -54,6 +54,12 @@
     "babelify": "^7.2.0",
     "browserify": "^13.1.1",
     "casperjs": "1.1.4",
+    "eslint": "^5.3.0",
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0",
     "exorcist": "^0.4.0",
     "mock-trezor": "^1.0.1",
     "npm-run-all": "^4.1.3",
