--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
+    "eslint-plugin-testcafe": "^0.2.1",
     "exorcist": "^0.4.0",
     "mock-trezor": "^1.0.1",
     "npm-run-all": "^4.1.3",
