--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@intercellular/cell": "bitex-la/cell#virus",
     "@types/bitcoinjs-lib": "^3.4.0",
-    "@types/web3": "^1.0.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "bip32-path": "0.4.2",
     "bip44-constants": "^2.3.0",
@@ -40,7 +39,8 @@
     "mock-trezor": "^1.0.8",
     "trezor-connect": "^5.0.28",
     "trezor.js": "6.1.0",
-    "web3": "^1.0.0-beta.34"
+    "web3": "^0.20.6",
+    "web3-typescript-typings": "^0.10.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
