--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,10 @@
     "module": "es6",
     "target": "es6",
     "allowJs": true,
-    "lib": ["es5", "es2015", "dom", "scripthost"]
+    "lib": ["es5", "es2015", "dom", "scripthost"],
+    "types": [
+      "web3-typescript-typings"
+    ]
   },
   "exclude": [ "**/node_modules/*" ]
 }
