--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,10 +6,7 @@
     "module": "es6",
     "target": "es6",
     "allowJs": true,
-    "lib": ["es5", "es2015", "dom", "scripthost"],
-    "types": [
-      "web3-typescript-typings"
-    ]
+    "lib": ["es5", "es2015", "dom", "scripthost"]
   },
   "exclude": [ "**/node_modules/*" ]
 }
