--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,6 +34,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: testcafe-live firefox tests/*
+      - run: node node_modules/testcafe/bin/testcafe.js firefox tests/*
 
 
