--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,8 @@ jobs:
     steps:
       - checkout
 
+      - run: sudo apt-get install firefox
+
       # Download and cache dependencies
       - restore_cache:
           keys:
