--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,12 +14,19 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
+  dependencies:
+    pre:
+      - pip install mozdownload mozinstall
+      - mozdownload --version latest --destination firefox.tar.bz2
+      - mozinstall firefox.tar.bz2
+      - wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
+      - gunzip -c geckodriver.tar.gz | tar xopf -
+      - chmod +x geckodriver && mv geckodriver /home/ubuntu/bin/
+
     working_directory: ~/repo
 
     steps:
       - checkout
-
-      - run: sudo apt-get install firefox
 
       # Download and cache dependencies
       - restore_cache:
