--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,15 +14,6 @@ jobs:
       # documented at https://circleci.com/docs/2.0/circleci-images/
       # - image: circleci/mongo:3.4.4
 
-  dependencies:
-    pre:
-      - pip install mozdownload mozinstall
-      - mozdownload --version latest --destination firefox.tar.bz2
-      - mozinstall firefox.tar.bz2
-      - wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
-      - gunzip -c geckodriver.tar.gz | tar xopf -
-      - chmod +x geckodriver && mv geckodriver /home/ubuntu/bin/
-
     working_directory: ~/repo
 
     steps:
@@ -35,6 +26,12 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
+      - run: pip install mozdownload mozinstall
+      - run: mozdownload --version latest --destination firefox.tar.bz2
+      - run: mozinstall firefox.tar.bz2
+      - run: wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
+      - run: gunzip -c geckodriver.tar.gz | tar xopf -
+      - run: chmod +x geckodriver && mv geckodriver /home/ubuntu/bin/
       - run: npm install
 
       - save_cache:
