--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,11 +26,9 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: sudo apt-get install python
-      - run: sudo apt-get install pip
-      - run: pip install mozdownload mozinstall
-      - run: mozdownload --version latest --destination firefox.tar.bz2
-      - run: mozinstall firefox.tar.bz2
+      - run: wget -O firefox.tar.gz https://archive.mozilla.org/pub/firefox/releases/43.0b5/linux-x86_64/en-US/firefox-61.0.2.tar.bz2
+      - run: tar -xvf firefox.tar.gz
+
       - run: wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
       - run: gunzip -c geckodriver.tar.gz | tar xopf -
       - run: chmod +x geckodriver && mv geckodriver /home/ubuntu/bin/
@@ -42,6 +40,6 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: node node_modules/testcafe/bin/testcafe.js firefox tests/*
+      - run: node node_modules/testcafe/bin/testcafe.js ~/:project/firefox/firefox tests/*
 
 
