--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: wget -O firefox.tar.gz https://archive.mozilla.org/pub/firefox/releases/43.0b5/linux-x86_64/en-US/firefox-61.0.2.tar.bz2
+      - run: wget -O firefox.tar.gz https://archive.mozilla.org/pub/firefox/releases/61.0.2/linux-x86_64/en-US/firefox-61.0.2.tar.bz2
       - run: tar -xvf firefox.tar.gz
 
       - run: wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
