--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
 
       - run: wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
       - run: gunzip -c geckodriver.tar.gz | tar xopf -
-      - run: chmod +x geckodriver && mv geckodriver /home/ubuntu/bin/
+      - run: chmod +x geckodriver && sudo mv geckodriver /usr/local/bin/
       - run: npm install
 
       - save_cache:
