--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
   build:
     docker:
       # specify the version you desire here
-      - image: circleci/node:7.10
+      - image: circleci/node:7.10-browsers
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
@@ -26,21 +26,10 @@ jobs:
           # fallback to using the latest cache if no exact match is found
           - v1-dependencies-
 
-      - run: wget -O firefox.tar.gz https://archive.mozilla.org/pub/firefox/releases/61.0.2/linux-x86_64/en-US/firefox-61.0.2.tar.bz2
-      - run: tar -xvf firefox.tar.gz
-      - run: sudo ln -s firefox/firefox /usr/local/bin/
-
-      - run: wget -O geckodriver.tar.gz https://github.com/mozilla/geckodriver/releases/download/v0.18.0/geckodriver-v0.18.0-linux64.tar.gz
-      - run: gunzip -c geckodriver.tar.gz | tar xopf -
-      - run: chmod +x geckodriver && sudo mv geckodriver /usr/local/bin/
-      - run: npm install
-
       - save_cache:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: node node_modules/testcafe/bin/testcafe.js firefox tests/*
-
-
+      - run: node node_modules/testcafe/bin/testcafe.js chrome:headless tests/*
