Run server in background

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,5 +33,5 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
         
       # run tests!
-      - run: npm run dev
+      - run: npm run dev &
       - run: bash ./wait_localhost.sh && node node_modules/testcafe/bin/testcafe.js chrome:headless tests/*
